# Graphics

./: .gitignore  CMakeLists.txt  alice.txt  scene.txt  test - 副本.txt  test.txt  test_mac.txt
.history/: CMakeLists_20220107150722.txt
.history/include/: light_20220107150914.hpp  render_20220107150834.hpp
.history/src/: main_20220107150610.cpp  main_20220107151011.cpp
include/: camera.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  photon_map.hpp  plane.hpp  ray.hpp  rectangle.hpp  render.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp  utils.hpp
models/: Final1.txt  Lamp.mtl  alice.txt  miku.mtl  orin.mtl  wine.mtl
models/textures/: Wood.tga  pebble.tga
src/: image.cpp  main.cpp  mesh.cpp  render.cpp  scene_parser.cpp  utils.cpp
textures/: pebbletga.tga:Zone.Identifier  txONeko.tga
